--- a/public/css/regis_item.css
+++ b/public/css/regis_item.css
@@ -1,4 +1,4 @@
-/* This is CSS for Registration */
+/* This is CSS for Employee Registration */
 
 #regis_head{
     text-align: center;
@@ -7,11 +7,10 @@
 
 #regis_field{
     padding: 1%;
-    margin: 1%;
     border-radius: 7px;
     border: 2px solid grey;
     /* box-sizing: border-box; */
-    border-style: inset;
+    /* border-style: inset; */
 }
 
 #regis_con_name{
@@ -31,7 +30,6 @@
     padding-top: 2%;
     padding-bottom: 2%;
     padding-right: 10%;
-    background-color: yellowgreen;
     text-align: center;
     color: white;
     border: 0px;
@@ -40,10 +38,6 @@
     display: block;
     width:40%;
 
-}
-
-#btn_regis:hover{
-    background-color: rgb(109, 160, 6);
 }
 
 #regis_btn_gen{
@@ -67,6 +61,35 @@
 #regis_btn{
     margin-top: 3%;
 }
+
+#btn_regis_form{
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+    padding-left: 10%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-right: 10%;
+    text-align: center;
+    border: 0px;
+    border-radius: 5px;
+    font-weight: bold;
+    display: block;
+    width:40%;
+}
+
+#btn_return_form{
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+    padding-left: 10%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-right: 10%;
+    text-align: center;
+    border: 0px;
+    border-radius: 5px;
+    font-weight: bold;
+    display: block;
+    width:40%;
+}
+
 /* end of registration css */
 
 input[type=text]{
@@ -102,5 +125,48 @@ background-color: #b6f5b8;
     object-position: center;
 }
 
-
 /* end of homepage css */
+
+
+/* scan css */
+
+#s_field{
+    border-radius: 5px;
+    padding: 1%;
+    border-color: white;
+    width: 90%;
+}
+
+#s_box{
+    text-align: center;
+    padding: 5%;
+    /* background-color: blueviolet; */
+}
+
+#s_search{
+    width: 100%;
+}
+
+#s_bh{
+    width: 80%;
+}
+
+.s_table{
+    text-align: center;
+    width: 90%;
+}
+
+.s_result{
+    padding: 2%;
+    border-radius: 1px;
+}
+
+#s_img{
+    padding: 3%;
+}
+
+#s_container{
+    text-align: center;
+}
+
+/* end of scan css */
